--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
 .bigDiv {
     display: flex;
     flex-direction: column;
+    height: 512px;
+    width: 512px;
 }
 
 .midDiv {
@@ -25,7 +27,7 @@ body {
 }
 
 .lastDiv {
-    width: 32px;
-    height: 32px;
+    /*width: 32px;
+    height: 32px;*/
     background-color: grey;
 }
