--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
-    background-color: antiquewhite;
     display: flex;
     justify-content: center;
     padding-bottom: 33%;
+    font-family: 'Courier New', Courier, monospace;
+    color: black;
+    font-weight: 900;
+    background-color: red;
 }
 .bod {
-    background-color: red;
     padding: 64px;
     display: flex;
     justify-content: center;
@@ -26,3 +28,26 @@ body {
     flex-direction: row;
 }
 
+.slider {
+    -webkit-appearance: none;
+    width: 50%;
+    height: 15px;
+    background: #000;
+    outline: none;
+    border: 5px solid yellow;
+    border-radius: 8px;
+    margin: 20px;
+  }
+  
+  
+  /* for chrome/safari */
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 60px;
+    background: #000;
+    cursor: pointer;
+    border: 5px solid yellow;
+    border-radius: 4px;
+  }
